--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "profile",
-  "homepage": "https://Sagarfh.github.io/Portfolio",
+  "homepage": "https://Sagarfh.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
