--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gh-pages": "^3.2.3",
     "jquery": "^3.6.0",
     "mdbootstrap": "^4.20.0",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
